--- a/app/Resources/FOSUserBundle/serializer/Model.User.yml
+++ b/app/Resources/FOSUserBundle/serializer/Model.User.yml
@@ -9,3 +9,5 @@ FOS\UserBundle\Model\User:
             expose: true
         roles:
             expose: true
+        lastLogin:
+            expose: true
