--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -66,6 +66,16 @@ doctrine:
                 user:     "%database_user%"
                 password: "%database_password%"
                 charset:  UTF8
+
+            # Dev
+            dev:
+                driver:   "%database_driver%"
+                host:     "%database_host%"
+                port:     "%database_port%"
+                dbname:   "%database_dev%"
+                user:     "%database_user%"
+                password: "%database_password%"
+                charset:  UTF8
                 
             # Telecom EM
             tem:
@@ -145,6 +155,20 @@ doctrine:
                 mappings:
                     LilyAdminBundle: ~
                     LilyUserBundle: ~
+                    
+            # Dev
+            dev:
+                connection:       dev
+                mappings:
+                    LilyBackOfficeBundle: ~
+                    LilyApiBundle: ~
+                    LilyKnowledgeBundle: ~
+                    LilyChatBundle: ~
+                    gedmo_loggable:
+                        type: annotation
+                        prefix: Lily\BackOfficeBundle\Loggable\Entity
+                        dir: "%kernel.root_dir%/../src/Lily/BackOfficeBundle/Loggable/Entity"
+                        is_bundle: false
                     
             # Telecom EM
             tem:
@@ -282,6 +306,10 @@ sensio_framework_extra:
 stof_doctrine_extensions:
     default_locale: fr_FR
     orm:
+        dev: 
+            loggable: true
+            timestampable: true
+            sortable: true
         tem: 
             loggable: true
             timestampable: true
