--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -70,7 +70,7 @@ assetic:
     debug:          %kernel.debug%
     use_controller: false
     bundles:        [LilyBackOfficeBundle, LilyApiBundle, LilyChatBundle, LilyKnowledgeBundle, LilyUserBundle, LilyHomePageBundle]
-    node: /usr/local/bin/node
+    node: /usr/bin/node
     filters:
         cssrewrite: ~
         # java: "/usr/bin/java"
@@ -79,10 +79,10 @@ assetic:
         #yui_js:
             #jar: "%kernel.root_dir%/Resources/java/yuicompressor.jar"
         uglifyjs2:
-            bin: /usr/local/bin/uglifyjs
+            bin: /usr/bin/uglifyjs
             apply_to: "\.js$"
         uglifycss:
-            bin: /usr/local/bin/uglifycss
+            bin: /usr/bin/uglifycss
             apply_to: "\.css$"
 
 # Doctrine Configuration
