--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -87,7 +87,7 @@ assetic:
     debug:          %kernel.debug%
     use_controller: false
     bundles:        [LilyBackOfficeBundle, LilyApiBundle, LilyChatBundle, LilyKnowledgeBundle, LilyUserBundle, LilyHomePageBundle]
-    node: /usr/bin/node
+    node: /usr/local/bin/node
     filters:
         cssrewrite: ~
         # java: "/usr/bin/java"
@@ -96,10 +96,10 @@ assetic:
         #yui_js:
             #jar: "%kernel.root_dir%/Resources/java/yuicompressor.jar"
         uglifyjs2:
-            bin: /usr/bin/uglifyjs
+            bin: /usr/local/bin/uglifyjs
             apply_to: "\.js$"
         uglifycss:
-            bin: /usr/bin/uglifycss
+            bin: /usr/local/bin/uglifycss
             apply_to: "\.css$"
 
 # Doctrine Configuration
@@ -399,6 +399,10 @@ stof_doctrine_extensions:
     default_locale: fr_FR
     orm:
         dev: 
+            loggable: true
+            timestampable: true
+            sortable: true
+        cgm: 
             loggable: true
             timestampable: true
             sortable: true
