wip on front restructuration + add bower/grunt/require

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /vendor/*
 /web/bundles/*
 /app/config/parameters.yml
+/bower_components/
+/build/
+/node_modules/
+/bower_components/
+npm-debug.log
