--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -27,20 +27,20 @@ framework:
 # Memcached bundle
 lsw_memcache:
     session:
-        client: bruno_dev
+        client: default
         prefix: "session_"
         ttl: 86400
         locking: true
         spin_lock_wait: 150000
     clients:
-        bruno_dev:
+        default:
             hosts:
-              - { dsn: 172.16.0.6 , port: 11211 }
+              - { dsn: localhost , port: 11211 }
             options:
                 compression: true
                 serializer: json
                 prefix_key: ""
-                hash: bruno_dev
+                hash: default
                 distribution: consistent
                 libketama_compatible: true
                 buffer_writes: true
@@ -58,15 +58,15 @@ lsw_memcache:
                 server_failure_limit: 0
     doctrine:
         metadata_cache:
-            client: bruno_dev
-            entity_manager: [bruno_dev, dev, cgm]
+            client: default
+            entity_manager: [default, dev, cgm]
         result_cache:
-            client: bruno_dev
-            entity_manager: [bruno_dev, dev, cgm]
+            client: default
+            entity_manager: [default, dev, cgm]
             prefix: "result_"
         query_cache:
-            client: bruno_dev
-            entity_manager: [bruno_dev, dev, cgm]
+            client: default
+            entity_manager: [default, dev, cgm]
 
 # JMS Automatic routing
 jms_i18n_routing:
