refactoring users Module. Add require, bower libs and modules

--- a/.jshintrc
+++ b/.jshintrc
@@ -5,14 +5,14 @@
     "es3": false,
     "forin": false,
     "immed": true,
-    "indent": false,
+    "indent": 2,
+    "white": true,
     "latedef": "nofunc",
     "newcap": true,
     "noarg": true,
     "noempty": true,
     "nonew": true,
     "plusplus": false,
-    "quotmark": true,
     "undef": true,
     "unused": "vars",
     "strict": true,
@@ -29,7 +29,7 @@
     "jquery": true,
 
     "globals": {
-        "define": false
-       ,"require": false
+        "define": false,
+        "require": false
     }
 }
