--- a/app/config/resources/assetic.yml
+++ b/app/config/resources/assetic.yml
@@ -9,12 +9,12 @@ assetic:
     debug:          %kernel.debug%
     use_controller: false
     bundles:        [LilyBackOfficeBundle, LilyApiBundle, LilyChatBundle, LilyKnowledgeBundle, LilyUserBundle, LilyHomePageBundle, LilyAdminBundle]
-    node: /usr/local/bin/node
+    node: /usr/bin/node
     filters:
         cssrewrite: ~
         uglifyjs2:
-            bin: /usr/local/bin/uglifyjs
+            bin: /usr/bin/uglifyjs
             apply_to: "\.js$"
         uglifycss:
-            bin: /usr/local/bin/uglifycss
+            bin: /usr/bin/uglifycss
             apply_to: "\.css$"
