--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -19,4 +19,4 @@ parameters:
     # Var
     locale: fr
     secret: e63298c3f103b670cb57be1596080ed94
-    cdn: cdn.saio.fr
+    cdn: [cdn.saio.fr]
