--- a/app/config/resources/framework.yml
+++ b/app/config/resources/framework.yml
@@ -10,8 +10,8 @@ framework:
     validation:      { enable_annotations: true }
     templating:
         engines: ['twig']
-        assets_base_urls:
-            http: "%cdn%"
+        #assets_base_urls:
+            #http: "%cdn%"
         #assets_version: SomeVersionScheme
     default_locale:  "%locale%"
     trusted_proxies: ~
