--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -1,15 +1,43 @@
 imports:
+	# Resources
     - { resource: parameters_dev.yml }
     - { resource: security.yml }
-    - { resource: resources_dev/solarium.yml }
-    - { resource: resources_dev/memcached.yml }
-    - { resource: resources_dev/assetic.yml }
+    - { resource: resources/solarium.yml }
+    - { resource: resources/assetic.yml }
+    - { resource: resources/jms.yml }
+    - { resource: resources/doctrine.yml }
+    - { resource: resources/mailer.yml }
+    - { resource: resources/fos.yml }
+    - { resource: resources/sensio.yml }
+    - { resource: resources/stof.yml }
+    - { resource: resources/mobiledetect.yml }
+    - { resource: resources/flysystem.yml }    
+    # Dev resources
     - { resource: resources_dev/framework.yml }
-    - { resource: resources_dev/jms.yml }
-    - { resource: resources_dev/doctrine.yml }
-    - { resource: resources_dev/mailer.yml }
-    - { resource: resources_dev/fos.yml }
-    - { resource: resources_dev/sensio.yml }
-    - { resource: resources_dev/stof.yml }
-    - { resource: resources_dev/mobiledetect.yml }
-    - { resource: resources_dev/flysystem.yml }
+    - { resource: resources_dev/memcached.yml }
+
+framework:
+    router:
+        resource: "%kernel.root_dir%/config/routing_dev.yml"
+        strict_requirements: true
+    profiler: { only_exceptions: false }
+
+web_profiler:
+    toolbar: true
+    intercept_redirects: false
+
+monolog:
+    handlers:
+        main:
+            type:  stream
+            path:  %kernel.logs_dir%/%kernel.environment%.log
+            level: debug
+        firephp:
+            type:  firephp
+            level: info
+        chromephp:
+            type:  chromephp
+            level: info
+
+assetic:
+    use_controller: true
