--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -13,3 +13,14 @@ imports:
     - { resource: resources/stof.yml }
     - { resource: resources/mobiledetect.yml }
     - { resource: resources/flysystem.yml }
+
+monolog:
+    handlers:
+        main:
+            type:         fingers_crossed
+            action_level: error
+            handler:      nested
+        nested:
+            type:  stream
+            path:  %kernel.logs_dir%/%kernel.environment%.log
+            level: debug
