Config & Users refactored

--- a/app/config/resources/uploader.yml
+++ b/app/config/resources/uploader.yml
@@ -1,8 +1,6 @@
 vich_uploader:
     db_driver: orm
-    
-    flysystem: true
-    storage:   vich_uploader.storage.flysystem
+    storage: flysystem
 
     mappings:
         user_avatar:
