--- a/app/config/resources/doctrine.yml
+++ b/app/config/resources/doctrine.yml
@@ -36,7 +36,7 @@ doctrine:
                 connection:       client
                 mappings:
                     LilyBackOfficeBundle: ~
-                    LilyApiBundle: ~
+                    LilyAppBundle: ~
                     LilyKnowledgeBundle: ~
                     LilyChatBundle: ~
                     gedmo_loggable:
