--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,6 @@
   "dependencies": {
     "almond": "~0.3.0",
     "backbone": "~1.1.2",
-    "autobahn": "~0.9.5",
     "bootstrap-wysihtml5": "*",
     "jquery-placeholder": "~2.0.8",
     "jquery": "~2.1.1",
@@ -31,6 +30,7 @@
     "bootstrap-daterangepicker": "~1.3.17",
     "jquery.scrollTo": "~1.4.14",
     "isMobile": "~0.3.5",
-    "snapjs": "~1.9.3"
+    "snapjs": "~1.9.3",
+    "fastclick": "~1.0.3"
   }
 }
