--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -2,13 +2,13 @@
 parameters:
     # Database
     database_driver: pdo_mysql
-    database_host: 172.16.0.6
+    database_host: 172.16.0.5
     database_port: 3306
     database_user: saio
     database_password: gW74uw?6
 
     # DB Clients
-    database_name: lilynew
+    database_name: clients
 
     # Mail
     mailer_transport: smtp
