--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -33,11 +33,11 @@ security:
         - { path: ^/[^/]+/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/[^/]+/register, role: ROLE_SUPER_ADMIN }
         - { path: ^/[^/]+/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/[^/]+/admin/^, role: ROLE_SUPER_ADMIN }
+        - { path: ^/[^/]+/admin, role: ROLE_SUPER_ADMIN }
         - { path: ^/[^/]+/lily, role: ROLE_USER }
 
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: ROLE_SUPER_ADMIN }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/^, role: ROLE_SUPER_ADMIN }
+        - { path: ^/admin, role: ROLE_SUPER_ADMIN }
         - { path: ^/lily, role: ROLE_USER }
