--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /web/bundles/*
 /app/config/parameters.yml
 /app/config/parameters_dev.yml
+/web/js/bower_components
+/web/js/compiled
+/web/css/compiled
 node_modules
 node_modules/*/node_modules
 compiled
