--- a/src/Lily/ChatBundle/Resources/config/routing.yml
+++ b/src/Lily/ChatBundle/Resources/config/routing.yml
@@ -1,8 +1,3 @@
 lily_chat:
-    pattern:  /
-    defaults: { _controller: LilyChatBundle:Operator:index }
-
-lily_chat_rest:
-    resource: "@LilyChatBundle/Controller/OperatorController.php"
-    type:     rest
-    prefix:   /
+    pattern:  /chat
+    defaults: { _controller: LilyChatBundle:Index:dashboard }
