--- a/src/Lily/StatisticsBundle/Resources/config/routing.yml
+++ b/src/Lily/StatisticsBundle/Resources/config/routing.yml
@@ -1,6 +1,6 @@
 lily_statistics:
     pattern:  /statistics
-    defaults: { _controller: LilyStatisticsBundle:Default:index }
+    defaults: { _controller: LilyStatisticsBundle:Index:statistics }
     
 lily_statistiques_api:
     resource: "@LilyStatisticsBundle/Controller/DefaultController.php"
